--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <!--#endregion -->
           <h1>Hi I'm Bryan!</h1>
           <p style="max-width: 70%">
-            I'm a Electrical Engineer, Software Engineering Student, Musician & Producer who loves to create.
+           Web Developer, Electrical Engineer & Avid Musician/Producer!
           </p>
 
           <ul class="actions">
