--- a/index.html
+++ b/index.html
@@ -193,36 +193,42 @@
           <div class="features">
             <section>
               <span class="icon solid major fa-code"></span>
-              <h3>Lorem ipsum amet</h3>
+              <h3>Documentation</h3>
               <p>
-                Phasellus convallis elit id ullam corper amet et pulvinar. Duis
-                aliquam turpis mauris, sed ultricies erat dapibus.
+             I produce my own documentation compulsivley, I'm not 100% sure exactly why but I can't help myself.
               </p>
+                         <div>
+      <img width="560" height="315"  src="https://i.pinimg.com/originals/18/e0/64/18e0641748101b3f7275f5723d4405f0.gif">
+</div>
+        
             </section>
             <section>
               <span class="icon solid major fa-lock"></span>
-              <h3>Aliquam sed nullam</h3>
+              <h3>Music</h3>
               <p>
-                Phasellus convallis elit id ullam corper amet et pulvinar. Duis
-                aliquam turpis mauris, sed ultricies erat dapibus.
+                Playing, writing, recording and now developing audio applications are a huge part of my life.
               </p>
-            </section>
+               <iframe width="560" height="315"  class="videoframe" src="https://www.youtube.com/embed/videoseries?list=PLgbtZjUuZEfJnkrEJOUbcVNAUAX20xM-8"  frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+       </iframe>
+     </section>
             <section>
               <span class="icon solid major fa-cog"></span>
-              <h3>Sed erat ullam corper</h3>
+              <h3>Automatic Guitar Effects Triggering Using Dynamic Time Warping</h3>
               <p>
-                Phasellus convallis elit id ullam corper amet et pulvinar. Duis
-                aliquam turpis mauris, sed ultricies erat dapibus.
+                 This project proposes an automatic solution to the restrictions that guitar effect pedals present. The performer will record the primary performances into the proposed software, which will analyze and store the sequential frequencies. The performer will then utilize the software during a subsequent live performance, to trigger effects when preceding frequencies of the live performance are recognized against the first performance. 
               </p>
+              <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSFvsw5kPGzq0D5KrRQoKTQI05sjeMbsMKqGvLwZA6ZFfDP6mAQD9dRubOeennDOP-UZmOJegN1IxKs/embed?start=true&loop=true&delayms=3000"width="560" height="315"  class="videoframe" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
             </section>
             <section>
               <span class="icon solid major fa-desktop"></span>
-              <h3>Veroeros quis lorem</h3>
+              <h3>Life Long Learner</h3>
               <p>
-                Phasellus convallis elit id ullam corper amet et pulvinar. Duis
-                aliquam turpis mauris, sed ultricies erat dapibus.
+            One of my greatest passions in life is learning and teaching, for as long as I can remember I have been trying to create collaborative learning enviornments on my own volition.
               </p>
-            </section>
+               <img width="560" height="315"  src="./assets/images/learning.JPG">
+               <div><p><!--Blank Space--> <!--Blank Space--> <!--Blank Space--> <!--Blank Space--> <!--Blank Space--> <!--Blank Space--> <!--Blank Space--> <!--Blank Space--> <!--Blank Space--> <!--Blank Space--> <!--Blank Space--> <!--Blank Space--> <!--Blank Space--> <!--Blank Space--> <!--Blank Space--> <!--Blank Space--> <!--Blank Space--> <!--Blank Space--> <!--Blank Space--> <!--Blank Space--> <!--Blank Space--> <!--Blank Space--> <!--Blank Space--> <!--Blank Space--> </p></div>
+              
+              <img width="560" height="315"  src="./assets/images/brain.JPG"></section>
             <section>
               <span class="icon solid major fa-link"></span>
               <h3>Urna quis bibendum</h3>
@@ -259,10 +265,7 @@
         <div class="inner">
           <h2>Get in touch</h2>
           <p>
-            Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam
-            turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus,
-            lacus eget hendrerit bibendum, urna est aliquam sem, sit amet
-            imperdiet est velit quis lorem.
+            As of now.... this form actually goes to my email... if you sent me a message before it was operational... I apologize.
           </p>
           <div class="split style1">
             <section>
