--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
   width: auto;
 
      } 
+     body.zoomed { 
+    zoom: 0.3; 
+    -moz-transform: scale(0.3); 
+    -moz-transform-origin: 0 0;
+} 
     </style>
   </head>
   <body class="is-preload">
@@ -76,6 +81,7 @@
           </ul>
           <!--#endregion -->
           <h1>Hi I'm Bryan!</h1>
+          <h2>This site is a work in progress... as such, you may need to zoom out to about 50% to see it as intended depending on your browser!</h2>
           <p style="max-width: 70%">
            Web Developer, Electrical Engineer & Avid Musician/Producer!
           </p>
