--- a/index.html
+++ b/index.html
@@ -188,7 +188,10 @@
               </ul>
               <iframe src="https://onedrive.live.com/embed?cid=D21009FDD967A241&amp;resid=D21009FDD967A241%21459307&amp;authkey=ABwIG4Hz-hsgPLU&amp;em=2&amp;wdAr=1.7777777777777777&amp;wdEaa=1" width="1400px" height="600px" frameborder="0">This is an embedded <a target="_blank" href="https://office.com">Microsoft Office</a> presentation, powered by <a target="_blank" href="https://office.com/webapps">Office</a>.</iframe>
 <iframe src="https://onedrive.live.com/embed?cid=D21009FDD967A241&amp;resid=D21009FDD967A241%21467616&amp;authkey=AMeSH1xUVYxRi3c&amp;em=2" width="1400px" height="1200px" frameborder="0">This is an embedded <a target="_blank" href="https://office.com">Microsoft Office</a> document, powered by <a target="_blank" href="https://office.com/webapps">Office</a>.</iframe>          </div>
-        </section>
+                <h2>Click the 100% button below and select "Page Width" to see to scale!</h2>
+
+                </div>
+</section>
       </section>
 
       <!-- Two -->
