--- a/elements.html
+++ b/elements.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>Elements - Hyperspace by HTML5 UP</title>
+		<title>Elements Reference Page</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -12,7 +12,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<a href="index.html" class="title">Hyperspace</a>
+				<a href="index.html" class="title">This page exists for future reference</a>
 				<nav>
 					<ul>
 						<li><a href="index.html">Home</a></li>
