--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
          
         </div>
         <ul class="actions">
-          <li><a href="generic.html" class="button">Learn more</a></li>
+          <li><a href="about.html" class="button">Learn more</a></li>
         </ul>
       </div>
     </section>
