--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
     <section id="two" class="wrapper style3 fade-up">
       <div class="inner">
         <h2>About Me</h2>
-        <p>-To Do-</p>
+        <p>-Here's some things I do to pass the time!-</p>
         <div class="features">
           <section>
             <span class="icon solid major fa-code"></span>
