--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                         <p>-Hope this helps someone other than me!-</p>
                         <ul class="actions">
                             <li>
-                                <a href="https://amazing-mccarthy-aa9929.netlify.app/directory.html" class="button"
+                                <a href="https://amazing-mccarthy-aa9929.netlify.app/index.html" class="button"
                                     target="_blank">Live Site</a>
                             </li>
                         </ul>
