--- a/index.html
+++ b/index.html
@@ -108,11 +108,11 @@
                         <p></p>
                         <ul class="actions">
                             <li>
-                                <a href="../goofy-euclid-1cd736.netlify.app/index.html" class="button"
+                                <a href="https://goofy-euclid-1cd736.netlify.app/" class="button"
                                     target="_blank">Live Site</a>
                             </li>
                             <li>
-                                <a href="../goofy-euclid-1cd736.netlify.app/core-site/index.html" class="button"
+                                <a href="https://goofy-euclid-1cd736.netlify.app/core-site/index.html" class="button"
                                     target="_blank">Main Page</a>
                             </li>
                         </ul>
@@ -131,7 +131,7 @@
                         <p>-Talk about App Features & Design Process Here-</p>
                         <ul class="actions">
                             <li>
-                                <a href="../eloquent-sammet-ba1810.netlify.app/index.html" class="button"
+                                <a href="https://eloquent-sammet-ba1810.netlify.app/index.html" class="button"
                                     target="_blank">Live Site</a>
                             </li>
                         </ul>
