--- a/index.html
+++ b/index.html
@@ -168,16 +168,8 @@
                         <ul class="actions">
                             <li><a href="#" class="button">Learn more</a></li>
                         </ul>
-                        <iframe
-                            src="https://onedrive.live.com/embed020d.html?cid=D21009FDD967A241&amp;resid=D21009FDD967A241%21459307&amp;authkey=ABwIG4Hz-hsgPLU&amp;em=2&amp;wdAr=1.7777777777777777&amp;wdEaa=1"
-                            width="1400px" height="600px" frameborder="0">This is an embedded <a target="_blank"
-                                href="../office.com/index.html">Microsoft Office</a> presentation, powered by <a
-                                target="_blank" href="../office.com/indexc3fc.html">Office</a>.</iframe>
-                        <iframe
-                            src="https://onedrive.live.com/embed7eb4.html?cid=D21009FDD967A241&amp;resid=D21009FDD967A241%21467616&amp;authkey=AMeSH1xUVYxRi3c&amp;em=2"
-                            width="1400px" height="1200px" frameborder="0">This is an embedded <a target="_blank"
-                                href="../office.com/index.html">Microsoft Office</a> document, powered by <a
-                                target="_blank" href="../office.com/indexc3fc.html">Office</a>.</iframe>
+                     <iframe src="https://onedrive.live.com/embed?resid=D21009FDD967A241%21459307&amp;authkey=%21ABwIG4Hz-hsgPLU&amp;em=2&amp;wdAr=1.7777777777777777" width="1186px" height="691px" frameborder="0">This is an embedded <a target="_blank" href="https://office.com">Microsoft Office</a> presentation, powered by <a target="_blank" href="https://office.com/webapps">Office</a>.</iframe>
+                        <iframe src="https://onedrive.live.com/embed?cid=D21009FDD967A241&amp;resid=D21009FDD967A241%21538639&amp;authkey=AD7NgCTKv4PWTDU&amp;em=2" width="476px" height="288px" frameborder="0">This is an embedded <a target="_blank" href="https://office.com">Microsoft Office</a> document, powered by <a target="_blank" href="https://office.com/webapps">Office</a>.</iframe>
                     </div>
                     <h2>Click the 100% button above (below the resume but above this text) and select "Page Width" to
                         see to scale!</h2>
