--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
                 <div class="split style1">
                     <section>
 
-
+<iframe src="https://calendar.google.com/calendar/embed?src=g2cj0br01h00nblfumqhp7dcgg%40group.calendar.google.com&ctz=America%2FNew_York" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
 
 
 
