--- a/Experimental/assets/download-version/BryanGuner.html
+++ b/Experimental/assets/download-version/BryanGuner.html
@@ -98,10 +98,11 @@
             <p></p>
             <ul class="actions">
               <li>
-                <a href="https://goofy-euclid-1cd736.netlify.app/" class="button" target="_blank">Live Site</a>
+                <a href="https://web-dev-resource-hub.netlify.app//" class="button" target="_blank">Live Site</a>
               </li>
               <li>
-                <a href="https://goofy-euclid-1cd736.netlify.app/core-site/index.html" class="button" target="_blank">Main Page</a>
+                <a href="https://web-dev-resource-hub.netlify.app//core-site/index.html" class="button"
+                  target="_blank">Main Page</a>
               </li>
             </ul>
           </div>
