--- a/about.html
+++ b/about.html
@@ -234,7 +234,12 @@
 <p><a target="_blank" rel="noopener noreferrer" href=""><img alt="breakup" style="max-width:100%;"></a></p>
 <hr>
 <p><a href="https://github.com/ellerbrock/open-source-badges/"><img src="https://camo.githubusercontent.com/1824a8ce41a8b45ab8d5a2a5d147583a924cbfe9fb7cab7122603492d1df9e38/68747470733a2f2f6261646765732e66726170736f66742e636f6d2f6f732f76312f6f70656e2d736f757263652e706e673f763d313033" alt="Open Source Love" data-canonical-src="https://badges.frapsoft.com/os/v1/open-source.png?v=103" style="max-width:100%;"></a> <a href="https://github.com/ellerbrock/open-source-badges/"><img src="https://camo.githubusercontent.com/5ad3f5755bc7d95d8d1110326303a95158675c896647cb874b5b4436834b0d33/68747470733a2f2f6261646765732e66726170736f66742e636f6d2f626173682f76312f626173682e706e673f763d313033" alt="Bash Shell" data-canonical-src="https://badges.frapsoft.com/bash/v1/bash.png?v=103" style="max-width:100%;"></a></p>
-<p><a href="https://goofy-euclid-1cd736.netlify.app/0-assets/planning/documentation/portfolio/tree-diagram.html" rel="nofollow"><img src="https://camo.githubusercontent.com/e139353250cd4434c9fde559d096ad30af8dfc36251146d2e798fc0104c42009/68747470733a2f2f676f6f66792d6575636c69642d3163643733362e6e65746c6966792e6170702f302d6173736574732f706c616e6e696e672f646f63756d656e746174696f6e2f706f7274666f6c696f2f747265652d6469616772616d2e68746d6c" alt="Documentation Status" data-canonical-src="https://goofy-euclid-1cd736.netlify.app/0-assets/planning/documentation/portfolio/tree-diagram.html" style="max-width:100%;"></a></p>
+<p><a href="https://web-dev-resource-hub.netlify.app//0-assets/planning/documentation/portfolio/tree-diagram.html"
+    rel="nofollow"><img
+      src="https://camo.githubusercontent.com/e139353250cd4434c9fde559d096ad30af8dfc36251146d2e798fc0104c42009/68747470733a2f2f676f6f66792d6575636c69642d3163643733362e6e65746c6966792e6170702f302d6173736574732f706c616e6e696e672f646f63756d656e746174696f6e2f706f7274666f6c696f2f747265652d6469616772616d2e68746d6c"
+      alt="Documentation Status"
+      data-canonical-src="https://web-dev-resource-hub.netlify.app//0-assets/planning/documentation/portfolio/tree-diagram.html"
+      style="max-width:100%;"></a></p>
 <hr>
 <hr>
 <p><a href="http://shields.io/" rel="nofollow"><img src="https://camo.githubusercontent.com/dc954b1e6af0e39a8148a4908ac9a4e49e4f17340977c9c88173e3788af10eb6/68747470733a2f2f696d672e736869656c64732e696f2f776562736974652d75702d646f776e2d677265656e2d7265642f687474702f736869656c64732e696f2e737667" alt="Website shields.io" data-canonical-src="https://img.shields.io/website-up-down-green-red/http/shields.io.svg" style="max-width:100%;"></a>
@@ -295,10 +300,10 @@
 <h3><a id="user-content-my-personal-web-development-blog-and-resource-sharing-site" class="anchor" aria-hidden="true" href="#my-personal-web-development-blog-and-resource-sharing-site"><svg class="octicon octicon-link" viewBox="0 0 16 16" version="1.1" width="16" height="16" aria-hidden="true"><path fill-rule="evenodd" d="M7.775 3.275a.75.75 0 001.06 1.06l1.25-1.25a2 2 0 112.83 2.83l-2.5 2.5a2 2 0 01-2.83 0 .75.75 0 00-1.06 1.06 3.5 3.5 0 004.95 0l2.5-2.5a3.5 3.5 0 00-4.95-4.95l-1.25 1.25zm-4.69 9.64a2 2 0 010-2.83l2.5-2.5a2 2 0 012.83 0 .75.75 0 001.06-1.06 3.5 3.5 0 00-4.95 0l-2.5 2.5a3.5 3.5 0 004.95 4.95l1.25-1.25a.75.75 0 00-1.06-1.06l-1.25 1.25a2 2 0 01-2.83 0z"></path></svg></a>My personal Web Development blog and resource sharing site</h3>
 <ul>
 <li>
-<p><a href="https://goofy-euclid-1cd736.netlify.app/" rel="nofollow">Live Site</a></p>
+<p><a href="https://web-dev-resource-hub.netlify.app//" rel="nofollow">Live Site</a></p>
 </li>
 <li>
-<p><a href="https://goofy-euclid-1cd736.netlify.app/core-site/index.html" rel="nofollow">Main Page</a></p>
+<p><a href="https://web-dev-resource-hub.netlify.app/" rel="nofollow">Main Page</a></p>
 </li>
 </ul>
  
