--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
                     <li><a href="#one">Projects</a></li>
                     <li><a href="#two">About Me</a></li>
                     <li><a href="#three">Get in touch</a></li>
+                    <li><a href="./projects.html">Projects</a></li>
                 </ul>
             </nav>
         </div>
@@ -108,14 +109,10 @@
                         <p></p>
                         <ul class="actions">
                             <li>
-                                <a href="https://goofy-euclid-1cd736.netlify.app/" class="button"
+                                <a href="https://web-dev-resource-hub.netlify.app" class="button"
                                     target="_blank">Live Site</a>
                             </li>
-                            <li>
-                                <a href="https://goofy-euclid-1cd736.netlify.app/core-site/index.html" class="button"
-                                    target="_blank">Main Page</a>
-                            </li>
-                        </ul>
+                               </ul>
                     </div>
                 </div>
             </section>
@@ -128,7 +125,7 @@
                         <h3>
                             Created a dynamic web page for a local musician using the Bootsrtap framework.
                         </h3>
-                        <p>-Talk about App Features & Design Process Here-</p>
+                        <p></p>
                         <ul class="actions">
                             <li>
                                 <a href="https://eloquent-sammet-ba1810.netlify.app/index.html" class="button"
@@ -152,7 +149,7 @@
                         <p>-Hope this helps someone other than me!-</p>
                         <ul class="actions">
                             <li>
-                                <a href="https://amazing-mccarthy-aa9929.netlify.app/index.html" class="button"
+                                <a href="https://trusting-dijkstra-4d3b17.netlify.app/" class=" button"
                                     target="_blank">Live Site</a>
                             </li>
                         </ul>
