--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                         <p></p>
                         <ul class="actions">
                             <li>
-                                <a href="https://eloquent-sammet-ba1810.netlify.app/index.html" class="button"
+                                <a href="https://mihirbegmusic.netlify.app/" class="button"
                                     target="_blank">Live Site</a>
                             </li>
                         </ul>
