--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                         <p></p>
                         <ul class="actions">
                             <li>
-                                <a href="https://web-dev-resource-hub.netlify.app" class="button"
+                                <a href="https://web-dev-resource-hub.netlify.app/" class="button"
                                     target="_blank">Live Site</a>
                             </li>
                                </ul>
